src/scss/Popover.scss
@import 'vars';

$popoverBackgroundColour: #242424;
$popoverWidth: 350px;
/* Following two rules must match corresponding values in Popover.js
* Distance of popover from parent */
$popoverSpacing: 5px;
$popoverArrowSize: 10px;

.c-popover {
  box-sizing: border-box;
  display: none;
  position: absolute;
  z-index: 100;
  width: $popoverWidth;
  padding: 10px;
  background-color: $popoverBackgroundColour;
  color: white;
  border-radius: 4px;
  opacity: 0;
  transition: opacity .2s linear;
  @media screen and (max-width: $breakpoint-mobile) {
    position: fixed;
    width: calc(100% - 30px);
    top: 10px !important;
    left: 10px !important;
    bottom: auto !important;
    right: auto !important;
  }
}
.c-popover--active {
  display: block;
  &.c-popover--fade {
    opacity: 1;
  }
}

.c-popover__parent {
  position: relative;
  @media screen and (max-width: $breakpoint-mobile) {
    position: static;
  }
}

.c-popover__footer {
  display: none;
  @media screen and (max-width: $breakpoint-mobile) {
    display: block;
  }
}

/* popover position coordinates
* top and bottom alignment requires JS help for 'top'/'bottom' property */
.c-popover--top,
.c-popover--bottom {
  left: calc(50% - #{$popoverWidth}/2);
}
.c-popover--right {
  right: calc(-#{$popoverWidth} - #{$popoverSpacing} - #{$popoverArrowSize});
}

.c-popover--left {
  left: calc(-#{$popoverWidth} - #{$popoverSpacing} - #{$popoverArrowSize});
}

/* "arrow" (i.e. .c-popover__arrow) coordinates */
.c-popover:before {
  content: ' ';
  position: absolute;
  width: 0px;
  height: 0px;
  font-size: 0;
  line-height: 0;
  @media screen and (max-width: $breakpoint-mobile) {
    border-top: 0;
    border-right: 0;
    border-bottom: 0;
    border-left: 0;
  }
}

.c-popover--top:before {
  border-left: $popoverArrowSize solid transparent;
  border-right: $popoverArrowSize solid transparent;
  border-top: $popoverArrowSize solid $popoverBackgroundColour;
  bottom: -$popoverArrowSize;
  left: calc(50% - #{$popoverArrowSize});
}

.c-popover--bottom:before {
  border-left: $popoverArrowSize solid transparent;
  border-right: $popoverArrowSize solid transparent;
  border-bottom: $popoverArrowSize solid $popoverBackgroundColour;
  top: -$popoverArrowSize;
  left: calc(50% - #{$popoverArrowSize});
}

.c-popover--left:before {
  border-top: $popoverArrowSize solid transparent;
  border-bottom: $popoverArrowSize solid transparent;
  border-left: $popoverArrowSize solid $popoverBackgroundColour;
  top: calc(50% - #{$popoverArrowSize});
  right: -$popoverArrowSize;
}

.c-popover--right:before {
  border-top: $popoverArrowSize solid transparent;
  border-bottom: $popoverArrowSize solid transparent;
  border-right: $popoverArrowSize solid $popoverBackgroundColour;
  top: calc(50% - #{$popoverArrowSize});
  left: -$popoverArrowSize;
}

.c-popover:before {
  @media screen and (max-width: $breakpoint-mobile) {
    border-top: 0;
    border-right: 0;
    border-bottom: 0;
    border-left: 0;
  }
}

